Thu Oct 16 09:39:08 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * orbsvcs/tests/Bug_1395_Regression/Makefile.am:

          Fixed a compile error on autoconf builds.

Wed Oct 15 15:35:50 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/constants.idl:
        * tests/IDL_Test/main.cpp:

          Added code to check that a signed long integer constant
          rhs value gets generated as such and not as an unsigned
          literal, which would precipitate compile a warning.

Wed Oct 15 12:08:01 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * orbsvcs/tests/Bug_3216_Regression/server.cpp:
        * orbsvcs/tests/Bug_1395_Regression/server.cpp:
        * orbsvcs/tests/Bug_1395_Regression/Bug_1395_Regression.mpc:
        * orbsvcs/tests/Bug_2316_Regression/server.cpp:
        * orbsvcs/tests/Bug_2615_Regression/server.cpp:
        * tests/CollocationLockup/CollocationLockup.cpp:
        * tests/CollocationLockup/SimpleNamingService.cpp:
        * tests/CollocationLockup/run_test.pl:
        * tests/Collocation_Tests/Hello.cpp:
        * tests/Bug_1495_Regression/Client_Task.cpp:
        * tests/Bug_1495_Regression/client_interceptor.h:
        * tests/Bug_1495_Regression/Threaded_Server.cpp:
        * tests/Bug_1495_Regression/Server_Task.cpp:
        * tests/Bug_1495_Regression/server_interceptor.h:
        * tests/Bug_1495_Regression/run_test.pl:

          Fixed memory leaks in all those tests.

Wed Oct 15 10:29:36 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * orbsvcs/tests/InterfaceRepo/Persistence_Test/Ptest.cpp:
        * orbsvcs/tests/InterfaceRepo/Persistence_Test/Ptest.h:
        * orbsvcs/tests/InterfaceRepo/Persistence_Test/run_test.pl:

          Made log of the pl script a bit more verbose. Changed ACE_ASSERT
          to real checks.

        * orbsvcs/tests/Bug_3215_Regression/server.cpp:
        * orbsvcs/tests/Bug_2287_Regression/server.cpp:
